--- a/react-e_commerce/src/Component/menu-items/menu-items.scss
+++ b/react-e_commerce/src/Component/menu-items/menu-items.scss
@@ -9,6 +9,7 @@
     background-size: cover;
     border-radius: 10px;
     box-shadow: 3px 3px 5px 2px gray;
+    margin-bottom: 25px;
 }
 .menu-item:hover{
   transform:scale(1.05,1.05) ;
