--- a/react-e_commerce/src/Component/header/header.scss
+++ b/react-e_commerce/src/Component/header/header.scss
@@ -7,6 +7,7 @@
     font-family: 'Fraunces', serif;
     font-size: large;
     color: greenyellow;
+    margin-left: 8px;
 }
 
 .header-brand:hover,.header-content:hover{
