--- a/react-e_commerce/src/index.scss
+++ b/react-e_commerce/src/index.scss
@@ -2,7 +2,34 @@ a, a:active, a:hover{
     text-decoration: none;
 }
 
-body{
+/* For the "inset" look only */
+html {
+    overflow: auto;
+}
+body {
     margin: 5% 2%;
     font-family: Fraunces;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 6px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background:yellowgreen;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: yellowgreen;
 }
